<resources>
    <string name="app_name">georegistry</string>
    <string name="title_activity_maps">georegistry</string>

    <!--    menu strings-->
    <string name="main_menu_home">home</string>
    <string name="main_menu_maps">maps</string>
    <string name="main_menu_forms">forms</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">sign in</string>
    <string name="action_sign_in_short">sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">not a valid username</string>
    <string name="invalid_password">password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="main_menu_profile">profile</string>
    <string name="action_register">Register Account</string>
    <string name="forms_action_submit">Submit</string>
    <string name="last_name_label_text">Last Name</string>
    <string name="forms_welcome_text">Welcome!</string>
    <string name="forms_birthday_label_text">Birthday</string>
    <string name="forms_first_name_label_text">First Name</string>
    <string name="profile_welcome_text">Welcome!</string>
    <string name="create_an_account_title">Create an Account</string>
    <string name="create_account_subtitle">Please fill out the information below</string>
    <string name="create_account_first_name_label">First Name</string>
    <string name="profile_title_text">Profile Information</string>

    <!-- Notification Strings-->
    <string name="channel_name">GeofenceStatus</string>
    <string name="content_text">You entered a Geofence.</string>
    <string name="notification_channel_description">Geofence status notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="api_key">AIzaSyDrPK_O5fW-ArHW66z2IOi3SeWsg6DFUI4</string>
</resources>
