<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.CreateAccount">

    <TextView
        android:id="@+id/update_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account_title"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/create_account_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_subtitle"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_account_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#f3f3f3"
        android:elevation="15dp"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_subtitle">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/create_account_first_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text=""
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_account_first_name_label" />


            <AutoCompleteTextView
                android:id="@+id/create_account_last_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text=""

                app:layout_constraintTop_toBottomOf="@+id/create_account_last_name_label" />


            <CheckBox
                android:id="@+id/create_account_admin_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:text="Registrar"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_account_password_input" />

            <EditText
                android:id="@+id/create_account_birthday_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintTop_toBottomOf="@+id/create_account_birthday_label" />

            <EditText
                android:id="@+id/create_account_email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/create_account_email_label" />

            <EditText
                android:id="@+id/create_account_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/create_account_password_label" />


            <TextView
                android:id="@+id/create_account_first_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/create_account_first_name_label"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/create_account_last_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:text="Last Name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_account_first_name_input" />

            <TextView
                android:id="@+id/create_account_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Birthday"
                app:layout_constraintStart_toStartOf="@+id/create_account_last_name_label"
                app:layout_constraintTop_toBottomOf="@+id/create_account_last_name_input" />

            <TextView
                android:id="@+id/create_account_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                app:layout_constraintStart_toStartOf="@+id/create_account_birthday_label"
                app:layout_constraintTop_toBottomOf="@+id/create_account_birthday_input" />

            <TextView
                android:id="@+id/create_account_password_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Password"

                app:layout_constraintStart_toStartOf="@+id/create_account_email_label"
                app:layout_constraintTop_toBottomOf="@+id/create_account_email_input" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_update"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/action_register"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.2" />



    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/globe_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>